fixed material menu to element. Always visible even when scrolling

--- a/c2net-iot-hub-site/LWFiles/materialmenu.css
+++ b/c2net-iot-hub-site/LWFiles/materialmenu.css
@@ -30,6 +30,7 @@ h1 {
   font-size: 24px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.22);
   cursor: pointer;
+  position:fixed;
 }
 .menu-button:hover {
   background: #d81558;
